k8s/istio/peer-authentication-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-storefront-bff
  namespace: yas
spec:
  selector:
    matchLabels:
      app: storefront-bff
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-backoffice-bff
  namespace: yas
spec:
  selector:
    matchLabels:
      app: backoffice-bff
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-swagger-ui
  namespace: yas
spec:
  selector:
    matchLabels:
      app: swagger-ui
  mtls:
    mode: PERMISSIVE
