k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: yas-mtls
  namespace: yas
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    8090:
      mode: PERMISSIVE
